# Hermes88

./: .env.example  .gitignore  BUG_REPORT.md  CHANGELOG.md  DELETE_ANALYSIS.md  Dockerfile  Dockerfile.camofox  Dockerfile.peak  Dockerfile.sandbox  Dockerfile.sandbox-manager  Dockerfile.vps  Dockerfile.webhook  INTEGRATIONS.md  LICENSE  Makefile  PEAK_ARCHITECTURE.md  PLAYBOOK.md  README.md  REPO_MANUAL.md  VPS_DEPLOYMENT.md  deploy.sh  docker-compose.peak.yml  docker-compose.yml  install.sh  main.py  mcp_shared.json  openclaude_settings.json  package.json  requirements.txt  send_file.py  start_openclaw.sh  supervisord.conf  supervisord.peak.conf  vps_deploy.sh
.github/: dependabot.yml
bot/: telegram_bot.py
data/: target_list.json
gateway/: __init__.py  event_consumer.py  memory_injector.py  response_formatter.py  run.py
hermes_config/: SOUL.md  config.yaml  gateway.yaml
rhodawk-tools/: Cargo.toml
rhodawk-tools/src/: analyzer.rs  main.rs  scanner.rs  search.rs  stats.rs
rhodawk_core/: __init__.py  audit.py  event_bus.py  image_gen.py  memory.py  operator_model.py  orchestrator.py  proactive.py  search.py  skill_engine.py  synthesis.py  task_engine.py  tools.py
sandbox/: config.go  executor.go  go.mod  go.sum  main.go  types.go
scripts/: health_check.sh  init_and_start.sh  jcode  rate_limit_proxy.py  rhodawk_orchestrator.sh  start_openclaw.sh  watchdog.py
tests/: conftest.py  test_event_bus.py  test_memory.py  test_orchestrator.py  test_synthesis.py  test_task_engine.py
webhook/: package-lock.json  package.json  tsconfig.json
webhook/src/: redis.ts  (+3 more)
(+47 files in other folders)
