[package]
name = "rhodawk-tools"
version = "0.1.0"
edition = "2021"
authors = ["Rhodawk AI <engineering@rhodawkai.com>"]
description = "Fast CLI tools for repository analysis, code metrics, and pattern matching"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1.8"
walkdir = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
